Bug 143159 - Box in navigation bar of form too short for values greater than 9999
Summary: Box in navigation bar of form too short for values greater than 9999
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.2
Keywords: bibisected, bisected, regression
: 141272 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-02 13:33 UTC by Frank Jones
Modified: 2021-08-27 09:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
See Navigationbar in LO 7.0 and newer and same in LO 6.4.7.2 (48.29 KB, application/pdf)
2021-07-18 10:10 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Jones 2021-07-02 13:33:17 UTC
The Absolute Record box in BASE does not accommodate large numbers over 10,000.
Comment 1 Robert Großkopf 2021-07-18 10:10:08 UTC
Created attachment 173656 [details]
See Navigationbar in LO 7.0 and newer and same in LO 6.4.7.2

Could confirm the buggy behavior.

Look at the screenshot. It will show 3 navigation bars. 
Navigation bar inside the table control will show values with 5 places.
Navigation bar as standalone form control will also show the values.
Navigation bar of the form wont show all palces.

This works up to LO 7.0, fails first in Version: 7.0.0.3
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Tested with OpenSUSE 15.2 64bit rpm Linux
Comment 2 Robert Großkopf 2021-08-10 15:06:30 UTC
*** Bug 141272 has been marked as a duplicate of this bug. ***
Comment 3 Buovjaga 2021-08-26 12:07:18 UTC
Bibisected with linux-64-7.0 to
https://git.libreoffice.org/core/commit/48a307b69713a244e747b3a4d444d6793d59b8d9
weld SvxFmAbsRecWin item window

Adding Cc: to Caolán McNamara

For a random example, see attachment 174477 [details] (double-click any of the forms). Open it with macros disabled, so it won't crash.
Comment 4 Commit Notification 2021-08-27 07:29:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/659d8d14037706f52ac2106113aedc27334c7e1f

Resolves: tdf#143159 reserve space for 6 characters/digits

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2021-08-27 07:36:25 UTC
made wider in trunk and backport to 7-2 in gerrit
Comment 6 Buovjaga 2021-08-27 09:19:09 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 67879304f61252838a6b2e2549d7205b445776f8
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 27 August 2021
Comment 7 Commit Notification 2021-08-27 09:22:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/72fa08057ad46d998f315f17f71c9b8aa65d2e14

Resolves: tdf#143159 reserve space for 6 characters/digits

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.