Resolves: tdf#143159 reserve space for 6 characters/digits

Change-Id: I44bcdf55a9b1d34e046b93e6a15f4019a925844d